fix a z-index issue and bring header on top of backdrop

--- a/media-queries.css
+++ b/media-queries.css
@@ -39,7 +39,6 @@
         .header {
             .hamburger {
                 display: block;
-                z-index: 4;
             }
 
             .navlist {
@@ -50,7 +49,6 @@
                 width: 160px;
                 text-align: center;
                 transition: 0.2s ease-in;
-                z-index: 4;
 
                 li {
                     background-color: #1f0fa3;
